Added warning when importing .nbt files from newer versions, fixed cursor and screen desync problems when opening containers inside world containers, fixed toast messages causing crash in <= 1.20.2, fixed NbtType#isImmutable not being remapped for NbtStrings, fixed issues with truncating extended chat, fixed crash when entering - into page field in client chest, Xantrisse updated pl_pl